--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -16,7 +16,9 @@
 <body>
     <h1>Teste com Iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, laborum voluptas sapiente minus, earum ex dolorum ipsum nam cum in consequuntur doloremque laudantium quasi eum illo dignissimos tempore voluptatem deserunt?</p>
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0">
+        <p>Infelizmente seu navegador não é compatível com esse Iframe.</p>
+    </iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam id ratione assumenda iure! Id mollitia veritatis possimus iusto, iste facilis aperiam corporis dolores rerum harum voluptates nam libero molestias aspernatur?</p>
 </body>
 </html>
