--- a/exercícios/ex025/form001.html
+++ b/exercícios/ex025/form001.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php">
+    <form method="post" action="cadastro.php">
         <p><label for="iname">Nome:</label> 
             <input type="text" name="name" id="iname"></p>
         <p><label for="isurname">Sobrenome:</label> 
