--- a/exercícios/ex026/mq004/index.html
+++ b/exercícios/ex026/mq004/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img src="imagens/icon-phone.png" alt="Smartphone" id="phone">
+        <img src="imagens/icon-tablet.png" alt="Tablet" id="tablet">
+        <img src="imagens/icon-pc.png" alt="PC" id="pc">
+        <img src="imagens/icon-print.png" alt="Impressão" id="print">
+        <img src="imagens/icon-tv.png" alt="TV" id="tv">
+    </main>
 </body>
 </html>
