--- a/exercícios/ex026/mq005/index.html
+++ b/exercícios/ex026/mq005/index.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Media Query</title>
 <link rel="stylesheet" href="estilos/style.css">
+<link rel="stylesheet" href="estilos/mobile.css" media="screen and (max-width: 600px)">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <ul>
-            <li>Opção 1</li>
-            <li>Opção 2</li>
-            <li>Opção 3</li>
-            <li>Opção 4</li>
-            <li>Opção 5</li>
-        </ul>
+        <nav>
+            <button><img src="imagens/menu-hamburger-icon.webp" alt="Menu Hamburger"></button>
+            <ul>
+                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 2</a></li>
+                <li><a href="#">Opção 3</a></li>
+                <li><a href="#">Opção 4</a></li>
+                <li><a href="#">Opção 5</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
