--- a/exercícios/ex026/mq005/index.html
+++ b/exercícios/ex026/mq005/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Media Query</title>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/> <!-- menu hamburguer-->
-<link rel="stylesheet" href="estilos/style.css"> <!-- mobile first-->
-<!-- <link rel="stylesheet" href="estilos/mobile.css" media="screen and (max-width: 600px)"> -->
+<link rel="stylesheet" href="estilos/mobile.css"> <!-- mobile first-->
+<link rel="stylesheet" href="estilos/style.css" media="screen and (min-width: 600px)"> <!-- outras mídias -->
 </head>
 <body>
     <header>
