--- a/exercícios/ex027/flex010/index.html
+++ b/exercícios/ex027/flex010/index.html
@@ -14,19 +14,15 @@
             background-color: lightblue;
             border: 1px solid black;
             text-align: center;
-            flex-basis: 250px;
         }
         #item1 {
-            flex-shrink: 0;
-            flex-grow: 0;
+            flex: 1 1 250px;
         }
         #item2 {
-            flex-shrink: 1;
-            flex-grow: 0;
+            flex: 0 2 250px;
         }
         #item3 {
-            flex-shrink: 0;
-            flex-grow: 0;
+            flex: 1 0 250px;
         }
     </style>
 </head>
