--- a/exercícios/ex028/grid002/index.html
+++ b/exercícios/ex028/grid002/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Layout</title>
-    <style>
+    <style> 
         /* visualizar com Dev Tools!*/
         .container {
             border: 3px solid rgb(0, 164, 0);
-            height: 300px;
+            height: 400px;
+
             display: grid;
-            grid-template-columns: auto auto;
-            grid-template-rows: auto auto auto auto;
+            grid-template-columns: auto auto auto;
+            grid-template-rows: auto auto auto;
             grid-gap: 0.5em;
+
+            align-items: center;
+            justify-items: normal;
+            align-content: normal;
+            justify-content: space-evenly;
         }
         .item {
             border: 2px solid red;
+            padding: 0.5em;
         }
     </style>
 </head>
